--- a/landing.html
+++ b/landing.html
@@ -15,8 +15,8 @@
   <section class="showcase">
     <header>
       <div class="brand">
-        <img class="logo-icon" src="./public/images/logo.png" alt="octopus logo"></img>
-        <h2 class="logo">Bella Ruby Jewelry</h2>
+        <a href="/"><img class="logo-icon" src="./public/images/logo.png" alt="octopus logo"></img></a>
+        <h2 class="logo"><a href="/" class="logo">Bella Ruby Jewelry</a></h2>
       </div>
       <div class="nav">
         <h3>Menu</h3>
@@ -31,7 +31,7 @@
     <div class="text">
       <h2>Ring Builder</h2>
       <h3>Custom jewelry pieces. Designed by you.</h3>
-      <a href="#">Start Building!</a>
+      <a href="/dashboard">Start Building!</a>
     </div>
 
     <ul class="social">
@@ -45,11 +45,12 @@
 
   <div class="menu">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Register</a></li>
-      <li><a href="#">Login</a></li>
-      <li><a href="#">My Collection</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="/dashboard">Dashboard</a></li>
+      <li><a href="/login">Register</a></li>
+      <li><a href="/login">Login</a></li>
+      <li><a href="#">Create a Ring</a></li>
+      <li><a href="/rings">My Collection</a></li>
+      <li><a href="mailto:s21nichols@hotmail.com" class="">Contact Us</a></li>
     </ul>
   </div>
 
