updated routes to findAll Rings and findOne Ring and updated dashboard

--- a/landing.html
+++ b/landing.html
@@ -31,7 +31,7 @@
     <div class="text">
       <h2>Ring Builder</h2>
       <h3>Custom jewelry pieces. Designed by you.</h3>
-      <a href="/dashboard">Start Building!</a>
+      <a href="/login">Start Building!</a>
     </div>
 
     <ul class="social">
@@ -45,11 +45,9 @@
 
   <div class="menu">
     <ul>
-      <li><a href="/dashboard">Dashboard</a></li>
-      <li><a href="/login">Register</a></li>
-      <li><a href="/login">Login</a></li>
+      <li><a href="/login">Login/Register</a></li>
+      <li><a href="/dashboard", withAuth >Dashboard</a></li>
       <li><a href="#">Create a Ring</a></li>
-      <li><a href="/rings">My Collection</a></li>
       <li><a href="mailto:s21nichols@hotmail.com" class="">Contact Us</a></li>
     </ul>
   </div>
