login/registration styling

--- a/landing.html
+++ b/landing.html
@@ -24,7 +24,7 @@
       </div>
     </header>
 
-    <img class="background" src="./public/images/landing-video_Moment.jpg"></img>
+    <img class="background" src="./public/images/ring-book.png"></img>
 
     <div class="overlay"></div>
 
