ring creator styling and route creation

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="public/stylesheets/style-login.css">
 </head>
 <body>
-  <section class="showcase">
+    <section class="showcase">
       <header>
         <div class="brand">
           <img class="logo-icon" src="public/images/logo.png" alt="octopus logo"></img>
@@ -25,7 +25,7 @@
         <div class="nav">
           <h3><a href="/build">Build a Ring</a></h3>
           <h3><a href="/dashboard">Dashboard</a></h3>
-          <button id="logout" type="button" class="btn btn-outline-light">Logout</button>
+          <button id="logout" type="button" class="button-logout">Logout</button>
         </div>
         <!--{{else}} -->
         <!-- <div class="nav">
