--- a/main.html
+++ b/main.html
@@ -8,41 +8,44 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"> 
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="stylesheet" href="public/stylesheets/style-main.css">
 </head>
 <body>
   <section class="showcase">
-      <header>
-        <div class="brand">
-          <img class="logo-icon" src="public/images/logo.png" alt="octopus logo"></img>
-          <h2><a class='logo' href="/">Bella Ruby Jewelry</a></h2>
-        </div>
-        <!-- {{#if loggedIn}}-->
-        <div class="nav">
-          <h3><a href="/build">Build a Ring</a></h3>
-          <h3><a href="/dashboard">Dashboard</a></h3>
-          <button id="logout" type="button" class="btn btn-outline-light">Logout</button>
-        </div>
-        <!--{{else}} -->
-        <!-- <div class="nav">
-          <h2><a href="/login">Login</a></h2>
-        </div>   -->
-        <!-- {{/if}} -->
-      </header>
+    <header>
+      <div class="brand">
+        <img class="logo-icon" src="public/images/logo.png" alt="octopus logo"></img>
+        <h2><a class='logo' href="/landing">Bella Ruby Jewelry</a></h2>
+      </div>
+      <!-- {{#if loggedIn}} -->
+      <div class="nav">
+        <h3><a href="/build">Build a Ring</a></h3>
+        <h3><a href="/dashboard">Dashboard</a></h3>
+        <button id="logout" type="button" class="btn btn-outline-light">Logout</button>
+      </div>
+      <!-- {{else}}
+      <div class="nav">
+        <h2><a href="/login">Login</a></h2>
+      </div>
+      {{/if}} -->
+    </header>
 
-      <img class="background" src="public/images/ring-stump.png"></img>
+    <img class="background" src="public/images/ring-stump.png"></img>
 
-      <div class="overlay"></div>
+    <div class="overlay"></div>
 
-      <main class="container">
+    <main class="container">
       <!-- {{{ body }}} -->
-      </main> 
-  <!--   
-    {{#if loggedIn}} -->
-    <script src="/javascript/logout.js"></script>
+    </main> 
+
+    <!-- {{#if loggedIn}} -->
+      <script src="public/javascript/logout.js"></script>
     <!-- {{/if}} -->
+
     <ul class="social">
       <li><a href="https://www.facebook.com/bellarubyjewelry"><i class="fab fa-facebook-square fa-2x"></i></a></li>
       <li><a href="https://www.instagram.com/bellarubyjewelry/?hl=en"><i class="fas fa-camera fa-2x"></i></a></li>
@@ -52,7 +55,6 @@
     </ul>
   </section>
 </body>
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 </html>
