--- a/ring-creator.html
+++ b/ring-creator.html
@@ -64,15 +64,15 @@
             <li><a href="#">Stones</a>
               <div class="sub-menu">
                 <div class="col">
-                  <img class="band-image" src="public/images/black-onyx.png" alt="Black Onyx Round Stone">
+                  <img class="stone-image" src="public/images/black-onyx.png" alt="Black Onyx Round Stone">
                   <p>This dramatic black stone comes in a variety of sizes and shapes.</p>
                 </div>
                 <div class="col">
-                  <img class="band-image" src="public/images/rainbow-moonstone.png" alt="Round Rainbow Moonstone">
+                  <img class="stone-image" src="public/images/rainbow-moonstone.png" alt="Round Rainbow Moonstone">
                   <p>The Rainbow Moonstone is a whimcal stone with many healing properties.</p>
                 </div>
                 <div class="col">
-                  <img class="band-image" src="public/images/turquiose.png" alt="Turquiose Round Stone">
+                  <img class="stone-image" src="public/images/turquiose.png" alt="Turquiose Round Stone">
                   <p>The turquiose stone is a classic look that can be fitted into any size or shape ring.</p>
                 </div>
               </div>
@@ -80,7 +80,7 @@
           </ul>
         </div>
         <div>
-          <button class="button" type="submit" id= "create-button">Create Ring</button>
+          <button class="button" type="submit" id="create-button">Create Ring</button>
         </div>
       </div>
     </Section>
